<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.quakereport.TodoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/category_phrases"
            android:layout_margin="16dp">

            <ImageView
                android:layout_width="70dp"
                android:src="@drawable/prepare"
                android:layout_height="70dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#fff"/>

            <Button
                android:id="@+id/prepare_move_intent"
                style="@style/CategoryStyle"
                android:layout_height="30dp"
                android:background="@color/category_numbers"
                android:text="@string/category_prepare" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/category_phrases"
            android:layout_margin="16dp">

            <ImageView
                android:layout_width="70dp"
                android:src="@drawable/survive"
                android:layout_height="70dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#fff"/>

            <Button
                android:id="@+id/survive_move_intent"
                style="@style/CategoryStyle"
                android:layout_height="30dp"
                android:background="@color/category_family"
                android:text="@string/category_survive" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/category_phrases"
            android:layout_margin="16dp">

            <ImageView
                android:layout_width="70dp"
                android:src="@drawable/recovery"
                android:layout_height="70dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#fff"/>

            <Button
                android:id="@+id/recover_move_intent"
                style="@style/CategoryStyle"
                android:layout_height="30dp"
                android:background="@color/category_colors"
                android:text="@string/category_recover" />
        </LinearLayout>

    </LinearLayout>



</ScrollView>