<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.quakereport.MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center"
       android:orientation="vertical"
       android:layout_margin="16dp">

       <ImageView
           android:layout_width="130dp"
           android:layout_height="130dp"
           android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp"
                android:background="@color/category_phrases"
                android:layout_margin="16dp">

                <ImageView
                    android:layout_width="80dp"
                    android:src="@drawable/todo"
                    android:layout_height="80dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#fff"/>

                <Button
                    android:id="@+id/numbers"
                    style="@style/CategoryStyle"
                    android:background="@color/category_numbers"
                    android:text="@string/category_todo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp"
                android:background="@color/category_phrases"
                android:layout_margin="16dp">

                <ImageView
                    android:layout_width="80dp"
                    android:src="@drawable/writing"
                    android:layout_height="80dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#fff"/>

                <Button
                    android:id="@+id/family"
                    style="@style/CategoryStyle"
                    android:background="@color/category_numbers"
                    android:text="@string/category_share" />
            </LinearLayout>


        </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <LinearLayout
               android:layout_width="130dp"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:gravity="center"
               android:padding="10dp"
               android:background="@color/category_phrases"
               android:layout_margin="16dp">

               <ImageView
                   android:layout_width="80dp"
                   android:src="@drawable/earthquake"
                   android:layout_height="80dp"/>

               <View
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:layout_margin="10dp"
                   android:background="#fff"/>

               <Button
                   android:id="@+id/colors"
                   style="@style/CategoryStyle"
                   android:background="@color/category_numbers"
                   android:text="@string/category_earthquake" />
           </LinearLayout>

           <LinearLayout
               android:layout_width="130dp"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:gravity="center"
               android:padding="10dp"
               android:background="@color/category_phrases"
               android:layout_margin="16dp">

               <ImageView
                   android:layout_width="80dp"
                   android:src="@drawable/rating"
                   android:layout_height="80dp" />

               <View
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:layout_margin="10dp"
                   android:background="#fff"/>

               <Button
                   android:id="@+id/phrases"
                   style="@style/CategoryStyle"
                   android:background="@color/category_numbers"
                   android:text="@string/category_rate" />
           </LinearLayout>


       </LinearLayout>



</LinearLayout>



</ScrollView>